# ethpector

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  LICENSE.txt  Makefile  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  docs.yaml  publishdocs.yaml  tests.yaml
docs/: conf.py  experiments.rst  index.rst
examples/: basic_owner.sol  example-addresses.txt  run_examples.sh
experiments/: README.rst
experiments/privileged-parties/: .gitignore  README.rst  blocks_date_daily.csv  calibrate_cutoff.py  dai.json  ethgasstation-top-100-gas-users.json  ethgasstation-top-100-gas-users_13_05_2022_11-21-24_AM.json  evaluate.py  experiment.py  extract.py  fetch-gas-guzzlers.py  graph.py  maker.json  storage_evolution.py  top-gas-users.json  validation_set.json  visualize.py
experiments/privileged-parties/data/: storage_evolution.json  tags.json
experiments/privileged-parties/paper/: calibrate_cutoff.py  create_classification.py  requirements.txt  storage_evolution.py
experiments/privileged-parties/scripts/: experiment.py  extract.py  fetch-gas-guzzlers.py  graph.py  utils.py  visualize_netgraph.py
experiments/privileged-parties/seeds/: gas_users_combined.json  kitties.json  paper-piper-pied.json  uniswap.json
experiments/risk_report/: .gitignore  README.rst  requirements.txt  risk_report.py
src/ethpector/: analysis.py  main.py
src/ethpector/abi/: __init__.py  abi.py
src/ethpector/assembly/: __init__.py  analysis.py  flow.py  metadata.py  program.py
src/ethpector/classify/: __init__.py  classification.py  parser.py
src/ethpector/config/: __init__.py  config.py
src/ethpector/data/: __init__.py  base.py  datatypes.py  etherscan.py  ipfs.py  node.py  provider.py  signatures.py  sourcify.py  swarm.py
src/ethpector/symbolic/: __init__.py  analysis.py
src/ethpector/symbolic/modules/: extractor.py  sender.py
src/ethpector/utils/: utils.py
tests/: conftest.py  test_main.py
tests/assembly/: test_flow.py
tests/classify/: test_classify.py  test_parser.py
tests/data/: test_data.py
tests/utils/: test_utils.py
